1. text paddings removed 2. scroll fixed 3. colored overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -75,11 +75,15 @@
   .hero {
     padding: 200px 0;
     margin: 0 auto;
-    width: 1600px;
+    width: 100%;
     height: 600px;
   
     background-image: linear-gradient(to right, var(--background-gradient-color),
     var(--background-gradient-color)), url('../images/background-img.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    
+    overflow: visible;
   }
   
   .clients,
@@ -599,7 +603,7 @@
 
   .examples-list-item > .link:hover .overlay-hidden-box,
   .examples-list-item > .link:focus .overlay-hidden-box{
-    transform: translateY(0);
+    transform: translateY(-1px);
   }
   
   .examples-section .button {
@@ -705,10 +709,11 @@
   left: 0px;
   width: 100%;
   height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   background-color: rgba(47, 48, 58, 0.8);
-
-  padding: 27px 82px;
 }
 
 .overflow-text {
@@ -724,7 +729,7 @@
 }
 
 .overlay-hidden-box {
-  top: 0px;
+  top: 1px;
   left: 0px;
   width: 100%;
   height: 294px;
@@ -732,6 +737,7 @@
   padding: 24px 63px;
 
   background: var(--overlay-box-color);
+  border: 1px solid transparent;
 
   transform: translateY(100%);
   transition: transform var(--animation-time) var(--cubic-function-variable);
@@ -749,7 +755,7 @@
 }
 
 .image-box {
-  height: 294px;;
+  height: 294px;
   overflow: hidden;
   cursor: auto;
 }
